created template, but still need to link them together

--- a/html/step2.html
+++ b/html/step2.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>AP Biology Photosynthesis</title>
+    <title>AP Biology Photosynthesis Step 2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style2.css" type="text/css">
     <style>
     </style>
 </head>
@@ -30,15 +30,19 @@
 
     <div class="row">
         <div class="side">
-            <h2>What is Photosynthesis?</h2>
-            <h5>Photo of me:</h5>
+            <h2>TITLE HEADING</h2>
+            <h5>Title description, Dec 7, 2017</h5>
             <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-            <h3>What is it used for?</h3>
-            <p>Lorem ipsum dolor sit ame.</p>
-            <div class="fakeimg" style="height:60px;">Image</div><br>
+            <p>Some text..</p>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <br>
+            <h2>TITLE HEADING</h2>
+            <h5>Title description, Sep 2, 2017</h5>
+            <div class="fakeimg" style="height:200px;">Image</div>
+            <p>Some text..</p>
+            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         </div>
-
+        
         <div class="main">
             <h2>TITLE HEADING</h2>
             <h5>Title description, Dec 7, 2017</h5>
@@ -56,7 +60,6 @@
 
     <div class="footer">
         <h2>Continue to the next step</h2>
-        <a href="step1.html" title="AP Biology Photosynthesis Step 1">Continue to the next step</a>
     </div>
 
 </body>
