link them together

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header">
         <h1>AP Biology</h1>
         <p>All about <b>photosynthesis</b>.</p>
-        <p>By: <b>RIley Kong and Gerald </b>
+        <p>By: <b>RIley Kong and Gerald Cogtla</b>
     </div>
 
     <div class="navbar">
