linked together, get info

--- a/html/step2.html
+++ b/html/step2.html
@@ -5,7 +5,7 @@
     <title>AP Biology Photosynthesis Step 2</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style2.css" type="text/css">
+    <link rel="stylesheet" href="../css/style2.css" type="text/css">
     <style>
     </style>
 </head>
@@ -60,6 +60,7 @@
 
     <div class="footer">
         <h2>Continue to the next step</h2>
+        <a href="step3.html" title="AP Biology Photosynthesis Step 1">Continue to the next step</a>
     </div>
 
 </body>
