All pages linked

--- a/contactUs.html
+++ b/contactUs.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>AP Biology Photosynthesis Step 4</title>
+    <title>AP Biology Photosynthesis | Contact Us</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../css/style4.css" type="text/css">
+    <link rel="stylesheet" href="styleUs.css" type="text/css">
     <style>
     </style>
 </head>
@@ -15,7 +15,7 @@
     <div class="header">
         <h1>AP Biology</h1>
         <p>All about <b>photosynthesis</b>.</p>
-        <p>By: <b>RIley Kong and Gerald </b>
+        <p>By: <b>RIley Kong and Gerald Cogtla</b>
     </div>
 
     <div class="navbar">
@@ -24,7 +24,6 @@
         <a href="#">Step 2</a>
         <a href="#">Step 3</a>
         <a href="#">Step 4</a>
-        <a href="#">Step 5</a>
         <a href="#" class="right">Contact Us</a>
     </div>
 
@@ -60,7 +59,7 @@
 
     <div class="footer">
         <h2>Continue to the next step</h2>
-        <a href="../index.html" title="Home">Youve reached the end. Go back to Homre</a>
+        <a href="index.html" title="Home">Home</a>
     </div>
 
 </body>
