--- a/html/step3.html
+++ b/html/step3.html
@@ -15,7 +15,7 @@
     <div class="header">
         <h1>AP Biology</h1>
         <p>All about <b>photosynthesis</b>.</p>
-        <p>By: <b>RIley Kong and Gerald </b>
+        <p>By: <b>RIley Kong and Gerald Cogtla</b>
     </div>
 
     <div class="navbar">
@@ -24,7 +24,6 @@
         <a href="#">Step 2</a>
         <a href="#">Step 3</a>
         <a href="#">Step 4</a>
-        <a href="#">Step 5</a>
         <a href="#" class="right">Contact Us</a>
     </div>
 
