--- a/html/step3.html
+++ b/html/step3.html
@@ -19,12 +19,12 @@
     </div>
 
     <div class="navbar">
-        <a href="#" class="active">Home</a>
-        <a href="#">Step 1</a>
-        <a href="#">Step 2</a>
-        <a href="#">Step 3</a>
-        <a href="#">Step 4</a>
-        <a href="#" class="right">Contact Us</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="html/step1.html">Step 1</a>
+        <a href="html/step2.html">Step 2</a>
+        <a href="html/step3.html">Step 3</a>
+        <a href="html/step4.html">Step 4</a>
+        <a href="contactUs.html" class="right">Contact Us</a>
     </div>
 
     <div class="row">
