--- a/html/step1.html
+++ b/html/step1.html
@@ -21,45 +21,47 @@
     <div class="navbar">
         <a href="../index.html" class="active">Home</a>
         <a href="step1.html">Step 1</a>
-        <a href="step2.html">Step 2</a>
-        <a href="step3.html">Step 3</a>
-        <a href="step4.html">Step 4</a>
+        <a href="step2.html">Step 2&3</a>
+        <a href="step3.html">Step 4&5</a>
         <a href="../contactUs.html" class="right">Contact Us</a>
     </div>
 
     <div class="row">
         <div class="side">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h1>Interphase</h1>
+            <h4>Preperation for cell division</h4>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg2_1.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>In this stage the cell grows and makes a copy of its DNA. This is where the cell spends most of its time throughout the entire process. </p>
             <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h3>G1 phase</h3>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg2_2.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>During G1​ phase, also called the first gap phase, the cell grows physically larger, copies organelles, and makes the molecular building blocks it will need in later steps. </p>
         </div>
         
         <div class="main">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h1> </h1>
+            <h3>S phase</h3>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg2_3.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p> In S phase, the cell synthesizes a complete copy of the DNA in its nucleus. It also duplicates a microtubule-organizing structure called the centrosome. The centrosomes help separate DNA during M phase. </p>
             <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h3>G2 phase</h3>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg2_4.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>During the second gap phase, or G2. phase, the cell grows more, makes proteins and organelles, and begins to reorganize its contents in preparation for mitosis. G2. phase ends when mitosis begins. </p>
         </div>
     </div>
 
     <div class="footer">
-        <h2>Continue to the next step</h2>
+        <h2>
         <a href="step2.html" title="AP Biology Photosynthesis Step 1">Continue to the next step</a>
+        </h2>
     </div>
 
 </body>
