--- a/html/step3.html
+++ b/html/step3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>AP Biology Photosynthesis Step 3</title>
+    <title>AP Biology Photosynthesis Step 4&5</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/style3.css" type="text/css">
@@ -21,45 +21,53 @@
     <div class="navbar">
         <a href="../index.html" class="active">Home</a>
         <a href="step1.html">Step 1</a>
-        <a href="step2.html">Step 2</a>
-        <a href="step3.html">Step 3</a>
-        <a href="step4.html">Step 4</a>
+        <a href="step2.html">Step 2&3</a>
+        <a href="step3.html">Step 4&5</a>
         <a href="../contactUs.html" class="right">Contact Us</a>
     </div>
 
     <div class="row">
         <div class="side">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h1>Anaphase</h1>
+            <h4>Chromosomes seperate. </h4>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg4_1.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>Anaphase is where chromosomes break at centromers. Sister chromatids move away from one another to opposite poles of the spindle. This is the shortest stage of mitosis. </p>
             <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h3>Disjunction</h3>
+            <p>The process in which the individual chromosomes are being pulled toward the poles by the kinetochore microtubules. </p>
+            <br>
+            <h3>Nondisjunction</h3>
+            <p>Nondisjunction is when disjunction fails because the chromosomes fail to seperate. This results in an uneven number of chromosomes on either end of the poles which raults in mutaions. </p>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg4_2.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
         </div>
         
         <div class="main">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h1>Telophase</h1>
+            <h4>Last phase and the seperation of the new cells.</h4>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg4_3.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>This is the last stage of cell division and the cell undoes everything that was needed for cell division. The nuclear envelope is reformed. At this point, chromosomes move to opposite ends of the cell and two nuclei are formed. </p>
             <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h3>Cytokinesis</h3>
+            <div class="fakeimg" style="height:350px;">
+                <img src="../images/pg4_4.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>This is where the cytoplasm divide creating two new cells. </p>
+            <p>In animal cells, the plasma membrane between the cells tightens inward along the cell’s equator until two daughter cells form. </p>
+            <p>In plant cells, a cell plate is formed along the equator of the two cells. Then, a new plasma membrane and cell wall is formed along each side of the cell plate.</p>
         </div>
     </div>
 
     <div class="footer">
-        <h2>Continue to the next step</h2>
-        <a href="step4.html" title="AP Biology Photosynthesis Step 1">Continue to the next step</a>
+        <h2>You've reached the end. Hope you learned a lot! </h2>
+        <h2>
+        <a href="../index.html" title="Home">Go back to Home</a>
+        </h2>
     </div>
 
 </body>
