--- a/contactUs.html
+++ b/contactUs.html
@@ -21,45 +21,27 @@
     <div class="navbar">
         <a href="index.html" class="active">Home</a>
         <a href="html/step1.html">Step 1</a>
-        <a href="html/step2.html">Step 2</a>
-        <a href="html/step3.html">Step 3</a>
-        <a href="html/step4.html">Step 4</a>
+        <a href="html/step2.html">Step 2&3</a>
+        <a href="html/step3.html">Step 4&5</a>
         <a href="contactUs.html" class="right">Contact Us</a>
     </div>
 
     <div class="row">
         <div class="side">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h2>Contacts</h2>
         </div>
         
         <div class="main">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-        </div>
+            <h2>Email: </h2>
+            <h3> Rileyk0998@hstat.org </h3>
+            <h3> Geraldc0135@hstat.org </h3>
+         </div>
     </div>
 
     <div class="footer">
-        <h2>Continue to the next step</h2>
+        <h2>
         <a href="index.html" title="Home">Home</a>
+        </h2>
     </div>
 
 </body>
