--- a/html/step2.html
+++ b/html/step2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>AP Biology Photosynthesis Step 2</title>
+    <title>AP Biology Photosynthesis Step 2&3</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/style2.css" type="text/css">
@@ -21,45 +21,55 @@
     <div class="navbar">
         <a href="../index.html" class="active">Home</a>
         <a href="step1.html">Step 1</a>
-        <a href="step2.html">Step 2</a>
-        <a href="step3.html">Step 3</a>
-        <a href="step4.html">Step 4</a>
+        <a href="step2.html">Step 2&3</a>
+        <a href="step3.html">Step 4&5</a>
         <a href="../contactUs.html" class="right">Contact Us</a>
     </div>
 
     <div class="row">
         <div class="side">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h1>Prophase</h1>
+            <h4>Cells break down into parts to be reconfigured.</h4>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg3_1.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>Chromosomes go from being in their chromatin form where they're all spread out to a more condensed form that you can actually see from a light microscope. This is all happening through chemical and thermodynamic reactions. The nuclear envelope starts to disappear. The centrosomes migrate to the opposite ends of the cell. </p>
             <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h3>Spindle Apparatus (Mitotic Spindle)</h3>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg3_2.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>When the chromosomes seperate, that start to form something known as the spindle apparatus. </p>
+            <br>
+            <h3>Microtubules Binding</h3>
+            <div class="fakeimg" style="height:300px;">
+                
+            </div>
+            <p> </p>
+
         </div>
         
         <div class="main">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h1>Metaphase</h1>
+            <h4>Makes sure everything is properly set up.</h4>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg3_3.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>This stage is where chromosomes become attached to the spindle fibers.  </p>
             <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h3>Checkpoints</h3>
+            <div class="fakeimg" style="height:300px;">
+                <img src="../images/pg3_4.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
+            </div>
+            <p>The checkpoints make sure that the chromosomes are binded to the kinetochore microtubules correctly, so that the chromosomes divide equally. </p>
+            <p>By going through this prcedure, it prevents the chance of mutation. If the checkpoints aren't met, mitosis will be put on hold until all the problems are fixed. </p>
         </div>
     </div>
 
     <div class="footer">
-        <h2>Continue to the next step</h2>
+        <h2>
         <a href="step3.html" title="AP Biology Photosynthesis Step 1">Continue to the next step</a>
+        </h2>
     </div>
 
 </body>
