--- a/index.html
+++ b/index.html
@@ -21,41 +21,48 @@
     <div class="navbar">
         <a href="index.html" class="active">Home</a>
         <a href="html/step1.html">Step 1</a>
-        <a href="html/step2.html">Step 2</a>
-        <a href="html/step3.html">Step 3</a>
-        <a href="html/step4.html">Step 4</a>
+        <a href="html/step2.html">Step 2&3</a>
+        <a href="html/step3.html">Step 4&5</a>
         <a href="contactUs.html" class="right">Contact Us</a>
     </div>
 
     <div class="row">
         <div class="side">
             <h2>What is Photosynthesis?</h2>
-            <h5>Photo of me:</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+            <p>It is when an organism use sunlight to synthesize foods from carbon dioxide and water.</p>
+            <div class="fakeimg" style="height:300px;">
+                <img src="images/pg1_1.jpg" alt="Photosynthesis" style="width:100%;height:100%;">
+            </div>
             <h3>What is it used for?</h3>
-            <p>Lorem ipsum dolor sit ame.</p>
-            <div class="fakeimg" style="height:60px;">Image</div><br>
+            <p>Photosynthesis uses light energy to convert carbon dioxide and water into sugars. The organisms can then use the sugars as energy.</p>
+            <div class="fakeimg" style="height:300px;">
+                <img src="images/pg1_2.jpg" alt="Formula" style="width:100%;height:100%;">
+            </div><br>
         </div>
 
         <div class="main">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h2>Cell Cycle</h2>
+            <div class="fakeimg" style="height:300px;">
+                <img src="images/pg1_3.jpg" alt="Cell Cycle" style="width:50%;height:100%;">
+            </div>
+            <p>It is a series of events that take place in a cell as it leads to the replication of DNA and the division of cytoplasm and organelles to produce two daughter cells.</p>
             <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h2>Mitosis and Meiosis</h2>
+            <div class="fakeimg" style="height:350px;">
+                <img src="images/pg1_4.jpg" alt="Mitosis vs Meiosis" style="width:75%;height:100%;">
+            </div>
+            <p>Both are forms of eukaryotic cell division</p>
+            <h4>Mitosis</h4>
+        <p>Mitosis produces two daughter cells that are identical to the parent cell. During the S phase chromosomes replicated are divided so that each daighter cells receives a copy of every chromosome. </p>
+            <h4>Meiosis</h4>
+            <p>Meiosis produces four daughter cells. Those are either haploid sex cells or gametes (which contain a single copy of each chromosome) from diploid cells (which contain two copies of each chromosome). </p>
         </div>
     </div>
 
     <div class="footer">
-        <h2>Continue to the next step</h2>
-        <a href="html/step1.html" title="AP Biology Photosynthesis Step 1">Continue to the next step</a>
+        <h2>
+            <a href="html/step1.html" title="AP Biology Photosynthesis Step 1">Continue to the next step</a>
+        </h2>
     </div>
 
 </body>
