--- a/html/step2.html
+++ b/html/step2.html
@@ -39,7 +39,7 @@
             <div class="fakeimg" style="height:300px;">
                 <img src="../images/pg3_2.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
             </div>
-            <p>When the chromosomes seperate, that start to form something known as the spindle apparatus. </p>
+            <p>When the chromosomes separate, that start to form something known as the spindle apparatus. </p>
             <br>
             <h3>Microtubules Binding</h3>
             <div class="fakeimg" style="height:300px;">
@@ -62,7 +62,7 @@
                 <img src="../images/pg3_4.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
             </div>
             <p>The checkpoints make sure that the chromosomes are binded to the kinetochore microtubules correctly, so that the chromosomes divide equally. </p>
-            <p>By going through this prcedure, it prevents the chance of mutation. If the checkpoints aren't met, mitosis will be put on hold until all the problems are fixed. </p>
+            <p>By going through this procedure, it prevents the chance of mutation. If the checkpoints aren't met, mitosis will be put on hold until all the problems are fixed. </p>
         </div>
     </div>
 
