--- a/html/step3.html
+++ b/html/step3.html
@@ -39,7 +39,7 @@
             <p>The process in which the individual chromosomes are being pulled toward the poles by the kinetochore microtubules. </p>
             <br>
             <h3>Nondisjunction</h3>
-            <p>Nondisjunction is when disjunction fails because the chromosomes fail to seperate. This results in an uneven number of chromosomes on either end of the poles which raults in mutaions. </p>
+            <p>Nondisjunction is when disjunction fails because the chromosomes fail to seperate. This results in an uneven number of chromosomes on either end of the poles which results in mutations. </p>
             <div class="fakeimg" style="height:300px;">
                 <img src="../images/pg4_2.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
             </div>
