--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <p>Both are forms of eukaryotic cell division</p>
             <h4>Mitosis</h4>
-        <p>Mitosis produces two daughter cells that are identical to the parent cell. During the S phase chromosomes replicated are divided so that each daighter cells receives a copy of every chromosome. </p>
+        <p>Mitosis produces two daughter cells that are identical to the parent cell. During the S phase chromosomes replicated are divided so that each daughter cells receives a copy of every chromosome. </p>
             <h4>Meiosis</h4>
             <p>Meiosis produces four daughter cells. Those are either haploid sex cells or gametes (which contain a single copy of each chromosome) from diploid cells (which contain two copies of each chromosome). </p>
         </div>
