--- a/html/step2.html
+++ b/html/step2.html
@@ -40,12 +40,12 @@
                 <img src="../images/pg3_2.jpg" alt="Cell Cycle" style="width:75%;height:100%;">
             </div>
             <p>When the chromosomes separate, that start to form something known as the spindle apparatus. </p>
-            <br>
-            <h3>Microtubules Binding</h3>
-            <div class="fakeimg" style="height:300px;">
+            <!--<br>-->
+            <!--<h3>Microtubules Binding</h3>-->
+            <!--<div class="fakeimg" style="height:300px;">-->
                 
-            </div>
-            <p> </p>
+            <!--</div>-->
+            <!--<p> </p>-->
 
         </div>
         
