--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
         <a href="contactUs.html" class="right">Contact Us</a>
     </div>
 
-    <div class="row">
-        <div class="side">
-            <h2>What is Photosynthesis?</h2>
-            <p>It is when an organism use sunlight to synthesize foods from carbon dioxide and water.</p>
-            <div class="fakeimg" style="height:300px;">
-                <img src="images/pg1_1.jpg" alt="Photosynthesis" style="width:100%;height:100%;">
-            </div>
-            <h3>What is it used for?</h3>
-            <p>Photosynthesis uses light energy to convert carbon dioxide and water into sugars. The organisms can then use the sugars as energy.</p>
-            <div class="fakeimg" style="height:300px;">
-                <img src="images/pg1_2.jpg" alt="Formula" style="width:100%;height:100%;">
-            </div><br>
-        </div>
+    <!--<div class="row">-->
+    <!--    <div class="side">-->
+    <!--        <h2>What is Photosynthesis?</h2>-->
+    <!--        <p>It is when an organism use sunlight to synthesize foods from carbon dioxide and water.</p>-->
+    <!--        <div class="fakeimg" style="height:300px;">-->
+    <!--            <img src="images/pg1_1.jpg" alt="Photosynthesis" style="width:100%;height:100%;">-->
+    <!--        </div>-->
+    <!--        <h3>What is it used for?</h3>-->
+    <!--        <p>Photosynthesis uses light energy to convert carbon dioxide and water into sugars. The organisms can then use the sugars as energy.</p>-->
+    <!--        <div class="fakeimg" style="height:300px;">-->
+    <!--            <img src="images/pg1_2.jpg" alt="Formula" style="width:100%;height:100%;">-->
+    <!--        </div><br>-->
+    <!--    </div>-->
 
         <div class="main">
             <h2>Cell Cycle</h2>
             <div class="fakeimg" style="height:300px;">
-                <img src="images/pg1_3.jpg" alt="Cell Cycle" style="width:50%;height:100%;">
+                <img src="images/pg1_3.jpg" alt="Cell Cycle" style="width:40%;height:100%;">
             </div>
             <p>It is a series of events that take place in a cell as it leads to the replication of DNA and the division of cytoplasm and organelles to produce two daughter cells.</p>
             <br>
             <h2>Mitosis and Meiosis</h2>
             <div class="fakeimg" style="height:350px;">
-                <img src="images/pg1_4.jpg" alt="Mitosis vs Meiosis" style="width:75%;height:100%;">
+                <img src="images/pg1_4.jpg" alt="Mitosis vs Meiosis" style="width:50%;height:100%;">
             </div>
             <p>Both are forms of eukaryotic cell division</p>
             <h4>Mitosis</h4>
