--- a/html/step1.html
+++ b/html/step1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>AP Biology Photosynthesis Step 1</title>
+    <title>AP Biology Cell Cycle Step 1</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/style1.css" type="text/css">
