--- a/contactUs.html
+++ b/contactUs.html
@@ -24,6 +24,7 @@
         <a href="html/step2.html">Step 2&3</a>
         <a href="html/step3.html">Step 4&5</a>
         <a href="contactUs.html" class="right">Contact Us</a>
+        <a href="html/more.html" class="right">More Info</a>
     </div>
 
     <div class="row">
