--- a/html/step1.html
+++ b/html/step1.html
@@ -24,6 +24,7 @@
         <a href="step2.html">Step 2&3</a>
         <a href="step3.html">Step 4&5</a>
         <a href="../contactUs.html" class="right">Contact Us</a>
+        <a href="more.html" class="right">More Info</a>
     </div>
 
     <div class="row">
@@ -60,7 +61,7 @@
 
     <div class="footer">
         <h2>
-        <a href="step2.html" title="AP Biology Photosynthesis Step 1">Continue to the next step</a>
+        <a href="step2.html" title="AP Biology Photosynthesis Step 2">Continue to the next step</a>
         </h2>
     </div>
 
