--- a/index.html
+++ b/index.html
@@ -24,21 +24,8 @@
         <a href="html/step2.html">Step 2&3</a>
         <a href="html/step3.html">Step 4&5</a>
         <a href="contactUs.html" class="right">Contact Us</a>
+        <a href="html/more.html" class="right">More Info</a>
     </div>
-
-    <!--<div class="row">-->
-    <!--    <div class="side">-->
-    <!--        <h2>What is Photosynthesis?</h2>-->
-    <!--        <p>It is when an organism use sunlight to synthesize foods from carbon dioxide and water.</p>-->
-    <!--        <div class="fakeimg" style="height:300px;">-->
-    <!--            <img src="images/pg1_1.jpg" alt="Photosynthesis" style="width:100%;height:100%;">-->
-    <!--        </div>-->
-    <!--        <h3>What is it used for?</h3>-->
-    <!--        <p>Photosynthesis uses light energy to convert carbon dioxide and water into sugars. The organisms can then use the sugars as energy.</p>-->
-    <!--        <div class="fakeimg" style="height:300px;">-->
-    <!--            <img src="images/pg1_2.jpg" alt="Formula" style="width:100%;height:100%;">-->
-    <!--        </div><br>-->
-    <!--    </div>-->
 
         <div class="main">
             <h2>Cell Cycle</h2>
