--- a/html/step1.html
+++ b/html/step1.html
@@ -14,7 +14,7 @@
 
     <div class="header">
         <h1>AP Biology</h1>
-        <p>All about <b>photosynthesis</b>.</p>
+        <p>All about <b>Cell Cycle</b>.</p>
         <p>By: <b>RIley Kong and Gerald Cogtla</b>
     </div>
 
