--- a/html/step2.html
+++ b/html/step2.html
@@ -14,7 +14,7 @@
 
     <div class="header">
         <h1>AP Biology</h1>
-        <p>All about <b>photosynthesis</b>.</p>
+        <p>All about <b>Cell Cycle</b>.</p>
         <p>By: <b>RIley Kong and Gerald Cogtla</b>
     </div>
 
@@ -63,6 +63,12 @@
             </div>
             <p>The checkpoints make sure that the chromosomes are binded to the kinetochore microtubules correctly, so that the chromosomes divide equally. </p>
             <p>By going through this procedure, it prevents the chance of mutation. If the checkpoints aren't met, mitosis will be put on hold until all the problems are fixed. </p>
+            <h3>First Checkpoint</h3>
+            <p>At G1 it checks for the go-ahead signal, if there is no signal then the cell enters the G0 Phase. </p>
+            <h3>Second Checkpoint</h3>
+            <p>At the end of G2, the go-ahead signal is received once it makes sure that it has all the necessary nutrients. </p>
+            <h3>Third Checkpoint</h3>
+            <p>At Anaphase, during the mitotic phase, there is a checkpoint which makes sure all the chromosomes are properly attached to the spindle at the metaphase plate. Once this checks out the rest of the cycle is allowed to be completed. </p>
         </div>
     </div>
 
